syntax = "proto3";
package linux;

message AppCommand {
  oneof command {
    SetCursorPositionCommand set_cursor_position = 1;
    Empty focus_change_command = 2;
  }
}

message Empty {}

message SetCursorPositionCommand {
  int32 x = 1;
  int32 y = 2;
  int32 width = 3;
  int32 height = 4;
}
